// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`default 1`] = `
<a
  className="link buttonLink button hideOutline tapTransition block pill accessibilityOutline"
  href="https://example.com"
  onBlur={[Function]}
  onClick={[Function]}
  onKeyPress={[Function]}
  onMouseDown={[Function]}
  onMouseUp={[Function]}
  onTouchCancel={[Function]}
  onTouchEnd={[Function]}
  onTouchMove={[Function]}
  onTouchStart={[Function]}
  rel=""
  target={null}
>
  WrapperLink
</a>
`;

exports[`inline 1`] = `
<a
  className="link buttonLink button hideOutline tapTransition inlineBlock pill accessibilityOutline"
  href="https://example.com"
  onBlur={[Function]}
  onClick={[Function]}
  onKeyPress={[Function]}
  onMouseDown={[Function]}
  onMouseUp={[Function]}
  onTouchCancel={[Function]}
  onTouchEnd={[Function]}
  onTouchMove={[Function]}
  onTouchStart={[Function]}
  rel=""
  target={null}
>
  WrapperLink
</a>
`;

exports[`target blank 1`] = `
<a
  className="link buttonLink button hideOutline tapTransition block pill accessibilityOutline"
  href="https://example.com"
  onBlur={[Function]}
  onClick={[Function]}
  onKeyPress={[Function]}
  onMouseDown={[Function]}
  onMouseUp={[Function]}
  onTouchCancel={[Function]}
  onTouchEnd={[Function]}
  onTouchMove={[Function]}
  onTouchStart={[Function]}
  rel="noopener noreferrer"
  target="_blank"
>
  WrapperLink
</a>
`;

exports[`target null 1`] = `
<a
  className="link buttonLink button hideOutline tapTransition block pill accessibilityOutline"
  href="https://example.com"
  onBlur={[Function]}
  onClick={[Function]}
  onKeyPress={[Function]}
  onMouseDown={[Function]}
  onMouseUp={[Function]}
  onTouchCancel={[Function]}
  onTouchEnd={[Function]}
  onTouchMove={[Function]}
  onTouchStart={[Function]}
  rel=""
  target={null}
>
  WrapperLink
</a>
`;

exports[`target self 1`] = `
<a
  className="link buttonLink button hideOutline tapTransition block pill accessibilityOutline"
  href="https://example.com"
  onBlur={[Function]}
  onClick={[Function]}
  onKeyPress={[Function]}
  onMouseDown={[Function]}
  onMouseUp={[Function]}
  onTouchCancel={[Function]}
  onTouchEnd={[Function]}
  onTouchMove={[Function]}
  onTouchStart={[Function]}
  rel=""
  target="_self"
>
  WrapperLink
</a>
`;

exports[`with nofollow 1`] = `
<a
  className="link buttonLink button hideOutline tapTransition block pill accessibilityOutline"
  href="https://example.com"
  onBlur={[Function]}
  onClick={[Function]}
  onKeyPress={[Function]}
  onMouseDown={[Function]}
  onMouseUp={[Function]}
  onTouchCancel={[Function]}
  onTouchEnd={[Function]}
  onTouchMove={[Function]}
  onTouchStart={[Function]}
  rel="nofollow"
  target={null}
>
  WrapperLink
</a>
`;

exports[`with onTap 1`] = `
<a
  className="link buttonLink button hideOutline tapTransition block pill accessibilityOutline"
  href="https://example.com"
  onBlur={[Function]}
  onClick={[Function]}
  onKeyPress={[Function]}
  onMouseDown={[Function]}
  onMouseUp={[Function]}
  onTouchCancel={[Function]}
  onTouchEnd={[Function]}
  onTouchMove={[Function]}
  onTouchStart={[Function]}
  rel=""
  target={null}
>
  WrapperLink
</a>
`;
